<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/alarm_menu_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="369dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/background_round_corners"
        android:backgroundTint="@color/md_theme_dark_onSurface"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/toggle_extended_view"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/expand_alarm_menu"
            android:focusableInTouchMode="false"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/arrow_up_float" />

        <Switch
            android:id="@+id/switch1"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="10dp"
            android:thumb="@drawable/custom_switch_thumb"
            android:track="@drawable/custom_switch_track"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toggle_extended_view"
            app:thumbTint="@color/switch_track_thumb_color_state"
            app:trackTint="@color/switch_track_color_state"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/no_alarm_scheduled"
            app:layout_constraintBottom_toBottomOf="@+id/switch1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/switch1" />

        <TextView
            android:id="@+id/alarm_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/time_default"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/day_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/day_number_1"
            app:layout_constraintEnd_toStartOf="@+id/day_2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switch1"
            app:srcCompat="@android:drawable/ic_menu_add" />

        <ImageButton
            android:id="@+id/day_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/day_number_2"
            app:layout_constraintEnd_toStartOf="@+id/day_3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/day_1"
            app:layout_constraintTop_toTopOf="@+id/day_1"
            app:srcCompat="@android:drawable/ic_menu_add" />

        <ImageButton
            android:id="@+id/day_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/day_number_3"
            app:layout_constraintEnd_toStartOf="@+id/day_4"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/day_2"
            app:layout_constraintTop_toTopOf="@+id/day_2"
            app:srcCompat="@android:drawable/ic_menu_add" />

        <ImageButton
            android:id="@+id/day_4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/day_number_4"
            app:layout_constraintEnd_toStartOf="@+id/day_5"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/day_3"
            app:layout_constraintTop_toTopOf="@+id/day_3"
            app:srcCompat="@android:drawable/ic_menu_add" />

        <ImageButton
            android:id="@+id/day_5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/day_number_5"
            app:layout_constraintEnd_toStartOf="@+id/day_6"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/day_4"
            app:layout_constraintTop_toTopOf="@+id/day_4"
            app:srcCompat="@android:drawable/ic_menu_add" />

        <ImageButton
            android:id="@+id/day_6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/day_number_6"
            app:layout_constraintEnd_toStartOf="@+id/day_7"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/day_5"
            app:layout_constraintTop_toTopOf="@+id/day_5"
            app:srcCompat="@android:drawable/ic_menu_add" />

        <ImageButton
            android:id="@+id/day_7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/day_number_7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/day_6"
            app:layout_constraintTop_toTopOf="@+id/day_6"
            app:srcCompat="@android:drawable/ic_menu_add" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/set_date_for_alarm"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:drawableLeft="@android:drawable/ic_menu_my_calendar"
            android:gravity="start|center_vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/set_date_for_alarm"
            android:textColor="#0C0B0B"
            app:backgroundTint="@color/button_color_state"
            app:backgroundTintMode="src_atop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/day_1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/set_alarm_sound"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:drawableLeft="@drawable/ic_notifications_black_24dp"
            android:gravity="start|center_vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/set_alarm_sound_text"
            android:textColor="#0C0B0B"
            app:backgroundTint="@color/button_color_state"
            app:backgroundTintMode="src_atop"
            app:layout_constraintBottom_toTopOf="@+id/set_alarm_vibration"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/set_date_for_alarm" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/set_alarm_vibration"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:drawableLeft="@android:drawable/ic_menu_always_landscape_portrait"
            android:gravity="start|center_vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/set_vibration"
            android:textColor="#0C0B0B"
            app:backgroundTint="@color/button_color_state"
            app:backgroundTintMode="src_atop"
            app:layout_constraintBottom_toTopOf="@+id/remove_alarm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/remove_alarm"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:drawableLeft="@android:drawable/ic_menu_close_clear_cancel"
            android:gravity="start|center_vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/remove"
            android:textColor="#0C0B0B"
            app:backgroundTint="@color/button_color_state"
            app:backgroundTintMode="src_atop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>