<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/alarm_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/menu_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/select_time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/set_hour"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:ems="2"
            android:gravity="center"
            android:inputType="number"
            android:textSize="@dimen/set_alarm_size"
            app:counterMaxLength="2"
            app:layout_constraintEnd_toStartOf="@+id/comma"
            app:layout_constraintTop_toBottomOf="@+id/menu_info"
            android:autofillHints="" />

        <TextView
            android:id="@+id/comma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/alarm_time_spaze"
            android:textSize="@dimen/set_alarm_size"
            app:layout_constraintBottom_toBottomOf="@+id/set_hour"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/set_hour" />

        <EditText
            android:id="@+id/set_minute"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:ems="2"
            android:gravity="center"
            android:inputType="number"
            android:textSize="@dimen/set_alarm_size"
            app:counterMaxLength="2"
            app:layout_constraintBottom_toBottomOf="@+id/set_hour"
            app:layout_constraintStart_toEndOf="@+id/comma"
            app:layout_constraintTop_toTopOf="@+id/set_hour"
            android:autofillHints="" />

        <Button
            android:id="@+id/set_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="20dp"
            android:text="@string/set_selected_alarm_time"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/set_minute" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="35dp"
            android:text="@string/cancel_selected_alarm_time"
            app:layout_constraintBottom_toBottomOf="@+id/set_time"
            app:layout_constraintEnd_toStartOf="@+id/set_time"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/set_time"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>