<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/background_item_alarm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageButton
            android:id="@+id/toggle_extended_view"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@color/background"
            android:backgroundTint="?android:attr/colorFocusedHighlight"
            android:contentDescription="@string/toogle_extend"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_down_arrow" />

        <Switch
            android:id="@+id/switch1"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toggle_extended_view"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <TextView
            android:id="@+id/scheduled_alarms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/no_alarm_scheduled"
            app:layout_constraintBottom_toBottomOf="@+id/switch1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/switch1" />

        <TextView
            android:id="@+id/alarm_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/time_default"
            android:textSize="@dimen/set_alarm_time_text_Size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RelativeLayout
            android:id="@+id/expandedView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switch1">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constrain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="0dp">

                <TableRow
                    android:id="@+id/days_list"
                    style="@style/background_table"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                </TableRow>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/set_date_for_alarm"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="10dp"
                    android:drawableLeft="@android:drawable/ic_menu_my_calendar"
                    android:gravity="start|center_vertical"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/set_date_for_alarm"
                    android:textColor="#0C0B0B"
                    app:backgroundTintMode="src_atop"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/days_list" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/set_alarm_sound"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:drawableLeft="@drawable/ic_notifications_black_24dp"
                    android:gravity="start|center_vertical"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/set_alarm_sound_text"
                    android:textColor="#0C0B0B"
                    app:backgroundTintMode="src_atop"
                    app:layout_constraintBottom_toTopOf="@+id/set_alarm_vibration"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/set_date_for_alarm" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/set_alarm_vibration"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:drawableLeft="@android:drawable/ic_menu_always_landscape_portrait"
                    android:gravity="start|center_vertical"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/set_vibration"
                    android:textColor="#0C0B0B"
                    app:backgroundTintMode="src_atop"
                    app:layout_constraintBottom_toTopOf="@+id/snooze_time"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/snooze_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:backgroundTintMode="src_atop"
                    android:drawableLeft="@android:drawable/ic_popup_reminder"
                    android:gravity="start|center_vertical"
                    android:text="@string/snooze_time"
                    android:textColor="#0C0B0B"
                    app:layout_constraintBottom_toTopOf="@+id/remove_alarm"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/remove_alarm"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="16dp"
                    android:drawableLeft="@android:drawable/ic_menu_close_clear_cancel"
                    android:gravity="start|center_vertical"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/remove"
                    android:textColor="#0C0B0B"
                    app:backgroundTintMode="src_atop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>